# Tracey

./: .gitignore  CODE_OF_CONDUCT  README  SECURITY
.forgejo/workflows/: testing.yml
.woodpecker/: testing.yml
bootstrap/: .gitignore  GNUmake  GNUmakefile  configure.ac  index.c
bootstrap/dependencies/: README
bootstrap/docs/: README
bootstrap/etc/: README
bootstrap/general/: README
bootstrap/general/argument/: args.c  argument.c  debug_print_args.c
bootstrap/general/compile/: compiler_pipeline.c
bootstrap/include/: README
bootstrap/include/tracey/argument/: args.h  argument.h
bootstrap/include/tracey/error/: error.h
bootstrap/include/tracey/file/: file.h
bootstrap/include/tracey/lexer/: lexer.h
bootstrap/include/tracey/struct/: args_struct.h  file_struct.h
bootstrap/runtime/: README
bootstrap/src/: README
bootstrap/test/: README
lib/: README
